2008-12-02 The transmuter classes in the patches.py are reorganized as
           subclasses of the Style classes. A few more box and arrow 
	   styles are added. -JJL

2008-12-02 Fixed a bug in the new legend class that didn't allowed 
           a tuple of coordinate vlaues as loc. -JJL

2008-12-02 Improve checks for external dependencies, using subprocess 
           (instead of deprecated popen*) and distutils (for version
           checking) - DSD

2008-11-30 Reimplementaion of the legend which supports baseline alignement,
	   multi-column, and expand mode. - JJL

2008-12-01 Fixed histogram autoscaling bug when bins or range are given
           explicitly (fixes Debian bug 503148) - MM

2008-11-25 Added rcParam axes.unicode_minus which allows plain hypen
           for minus when False - JDH

2008-11-25 Added scatterpoints support in Legend. patch by Erik
           Tollerud - JJL

2008-11-24 Fix crash in log ticking. - MGD

2008-11-20 Added static helper method BrokenHBarCollection.span_where
           and Axes/pyplot method fill_between.  See
           examples/pylab/fill_between.py - JDH

2008-11-12 Add x_isdata and y_isdata attributes to Artist instances,
           and use them to determine whether either or both
           coordinates are used when updating dataLim.  This is
           used to fix autoscaling problems that had been triggered
           by axhline, axhspan, axvline, axvspan. - EF

2008-11-11 Update the psd(), csd(), cohere(), and specgram() methods
           of Axes and the csd() cohere(), and specgram() functions
           in mlab to be in sync with the changes to psd().
           In fact, under the hood, these all call the same core
           to do computations. - RM

2008-11-11 Add 'pad_to' and 'sides' parameters to mlab.psd() to
           allow controlling of zero padding and returning of
           negative frequency components, respecitively.  These are
           added in a way that does not change the API. - RM
